# Captcha-Solver

./: APT  APT.cbp  CMakeLists.txt  Makefile  README.md  ReadME.rtf  cmake_install.cmake  main.cpp  out.txt
